crates/zoid-tui/tests/snapshots/tasks_snapshot__squeezed_rail_collapses_repo_and_context_first.snap
---
source: crates/zoid-tui/tests/tasks_snapshot.rs
expression: "draw_at(&s, &many_tasks(4), 100, 19)"
---
"v0.3.2                                          zoid          Esc interrupt · : command · ^P palette"
"    (no messages yet)                                 █ ╭ ▾ repo ─────────────────────────────────╮ "
"                                                      █ ╰─────────────────────────────────────────╯ "
"                                                      █                                             "
"                                                      █ ╭ ▾ session ──────────────────────────────╮ "
"                                                      █ ╰─────────────────────────────────────────╯ "
"                                                      █                                             "
"                                                      █ ╭ ▾ context · tokens ─────────────────────╮ "
"                                                      █ ╰─────────────────────────────────────────╯ "
"                                                      █                                             "
"                                                      █ ╭ ▾ tasks ────────────────────────────────╮ "
"                                                      █ ╰─────────────────────────────────────────╯ "
"                                                      █                                             "
"                                                      █ ╭ ▾ subagents ────────────────────────────╮ "
"                                                      █ ╰─────────────────────────────────────────╯ "
"┌ message ─────────────────────────────────────────────────────────────────────────────────────────┐"
"│                                                                                                  │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
" CHAT                           ⊟ compact     ● idle      ◐ tool                        zoom normal "
