crates/zoid-tui/tests/snapshots/tasks_snapshot__tasks_drawer_empty_shows_no_tasks_line.snap
---
source: crates/zoid-tui/tests/tasks_snapshot.rs
expression: "draw(&s, &[])"
---
"                                                                                                    "
"    (no messages yet)                                   ╭ ▾ repo ─────────────────────────────────╮ "
"                                                        │📦 repo   ⎇ main                         │ " Hidden by multi-width symbols: [(58, " ")]
"                                                        │🔧 worktree (none)                       │ " Hidden by multi-width symbols: [(58, " ")]
"                                                        │📝 changes +0 -0 · 0 files               │ " Hidden by multi-width symbols: [(58, " ")]
"                                                        ╰─────────────────────────────────────────╯ "
"                                                                                                    "
"                                                        ╭ ▾ session ──────────────────────────────╮ "
"                                                        │🟢 (unnamed)                             │ " Hidden by multi-width symbols: [(58, " ")]
"                                                        │🤖  ·                                    │ " Hidden by multi-width symbols: [(58, " ")]
"                                                        │⌚ dur 0m   tok 0                        │ " Hidden by multi-width symbols: [(58, " ")]
"                                                        │📊 ctx 0                                 │ " Hidden by multi-width symbols: [(58, " ")]
"                                                        │📁 cwd                                   │ " Hidden by multi-width symbols: [(58, " ")]
"                                                        ╰─────────────────────────────────────────╯ "
"                                                                                                    "
"                                                        ╭ ▾ context · tokens ─────────────────────╮ "
"                                                        │churn                              cache │ "
"                                                        │                                         │ "
"                                                        │                                         │ "
"                                                        │                                         │ "
"                                                        │                                         │ "
"                                                        ╰─────────────────────────────────────────╯ "
"                                                                                                    "
"                                                        ╭ ▾ tasks ────────────────────────────────╮ "
"                                                        │no tasks                                 │ "
"                                                        ╰─────────────────────────────────────────╯ "
"                                                                                                    "
"                                                                                                    "
"┌ message ─────────────────────────────────────────────────────────────────────────────────────────┐"
"│                                                                                                  │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
" CHAT  zoom normal · ^P palette                                                              ● idle "
