crates/zoid-tui/tests/snapshots/tasks_snapshot__tasks_drawer_grows_to_fit_eight_tasks_at_baseline.snap
---
source: crates/zoid-tui/tests/tasks_snapshot.rs
expression: "draw_at(&s, &many_tasks(8), 160, 40)"
---
"v0.4.0                                                                        zoid                                        Esc interrupt · : command · ^P palette"
"    (no messages yet)                                                                                             █ ╭ ▾ repo ─────────────────────────────────╮ "
"                                                                                                                  █ │📦 repo   ⎇ main                         │ " Hidden by multi-width symbols: [(118, " ")]
"                                                                                                                  █ │🔧 worktree (none)                       │ " Hidden by multi-width symbols: [(118, " ")]
"                                                                                                                  █ │📝 changes +0 -0 · 0 files               │ " Hidden by multi-width symbols: [(118, " ")]
"                                                                                                                  █ ╰─────────────────────────────────────────╯ "
"                                                                                                                  █                                             "
"                                                                                                                  █ ╭ ▾ session ──────────────────────────────╮ "
"                                                                                                                  █ │🟢 (unnamed)                             │ " Hidden by multi-width symbols: [(118, " ")]
"                                                                                                                  █ │🤖  ·                                    │ " Hidden by multi-width symbols: [(118, " ")]
"                                                                                                                  █ │⌚ tok 0  tps 0                          │ " Hidden by multi-width symbols: [(118, " ")]
"                                                                                                                  █ │📊 ctx 0                                 │ " Hidden by multi-width symbols: [(118, " ")]
"                                                                                                                  █ │📁 cwd                                   │ " Hidden by multi-width symbols: [(118, " ")]
"                                                                                                                  █ ╰─────────────────────────────────────────╯ "
"                                                                                                                  █                                             "
"                                                                                                                  █ ╭ ▾ context · tokens ─────────────────────╮ "
"                                                                                                                  █ │churn                              cache │ "
"                                                                                                                  █ │                                         │ "
"                                                                                                                  █ │                                         │ "
"                                                                                                                  █ │                                         │ "
"                                                                                                                  █ │                                         │ "
"                                                                                                                  █ │                                         │ "
"                                                                                                                  █ │                                         │ "
"                                                                                                                  █ ╰─────────────────────────────────────────╯ "
"                                                                                                                  █                                             "
"                                                                                                                  █ ╭ ▾ tasks ────────────────────────────────╮ "
"                                                                                                                  █ │✓ task 0                                 │ "
"                                                                                                                  █ │◐ task 1                                 │ "
"                                                                                                                  █ │☐ task 2                                 │ "
"                                                                                                                  █ │✓ task 3                                 │ "
"                                                                                                                  █ │◐ task 4                                 │ "
"                                                                                                                  █ ╰─────────────────────────────────────────╯ "
"                                                                                                                  █                                             "
"                                                                                                                  █ ╭ ▾ subagents ────────────────────────────╮ "
"                                                                                                                  █ │none                                     │ "
"                                                                                                                  █ ╰─────────────────────────────────────────╯ "
"┌ message ─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│                                                                                                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
" CHAT  SELECT                                                 ⊟ compact     ● idle      ◐ tool                                                      zoom normal "
