crates/zoid-tui/tests/snapshots/tasks_snapshot__tasks_drawer_shows_pending_active_done_glyphs.snap
---
source: crates/zoid-tui/tests/tasks_snapshot.rs
expression: "draw(&s, &items)"
---
"                                                zoid                                      ^P palette"
"    (no messages yet)                                 █ ╭ ▾ repo ─────────────────────────────────╮ "
"                                                      █ │📦 repo   ⎇ main                         │ " Hidden by multi-width symbols: [(58, " ")]
"                                                      █ │🔧 worktree (none)                       │ " Hidden by multi-width symbols: [(58, " ")]
"                                                      █ ╰─────────────────────────────────────────╯ "
"                                                      █                                             "
"                                                      █ ╭ ▾ session ──────────────────────────────╮ "
"                                                      █ │🟢 (unnamed)                             │ " Hidden by multi-width symbols: [(58, " ")]
"                                                      █ │🤖  ·                                    │ " Hidden by multi-width symbols: [(58, " ")]
"                                                      █ │⌚ dur 0m   tok 0   cac 0                │ " Hidden by multi-width symbols: [(58, " ")]
"                                                      █ │📊 ctx 0                                 │ " Hidden by multi-width symbols: [(58, " ")]
"                                                      █ │📁 cwd                                   │ " Hidden by multi-width symbols: [(58, " ")]
"                                                      █ ╰─────────────────────────────────────────╯ "
"                                                      █                                             "
"                                                      █ ╭ ▾ context · tokens ─────────────────────╮ "
"                                                      █ │churn                              cache │ "
"                                                      █ │                                         │ "
"                                                      █ │                                         │ "
"                                                      █ │                                         │ "
"                                                      █ │                                         │ "
"                                                      █ ╰─────────────────────────────────────────╯ "
"                                                      █                                             "
"                                                      █ ╭ ▾ tasks ────────────────────────────────╮ "
"                                                      █ │☐ write plan                             │ "
"                                                      █ │◐ implement drawer                       │ "
"                                                      █ │✓ read brief                             │ "
"                                                      █ ╰─────────────────────────────────────────╯ "
"                                                      █                                             "
"┌ message ─────────────────────────────────────────────────────────────────────────────────────────┐"
"│                                                                                                  │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
" CHAT                                          ● idle                                   zoom normal "
